# Prisim

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
prism/: __init__.py  auth.py  cli.py  client.py  config.py  risk.py  storage.py
systemd/: prism.service.example
tests/: test_prism.py
