[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-kalshi"
version = "0.1.0"
description = "A safe, portable Python CLI for Kalshi market data and trading."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["cryptography>=41.0"]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
